--- a/public/AllApps.json
+++ b/public/AllApps.json
@@ -134,7 +134,7 @@
   {
     "image": "https://cdn-icons-png.flaticon.com/512/3143/3143609.png",
     "title": "QuickScan",
-    "companyName": "DocuPro: PDF & Document Scanner",
+    "companyName": "DocuPro: Document Scanner",
     "id": 13,
     "description": "Convert your smartphone into a powerful mobile scanner for documents, receipts, and business cards. Create high-quality PDF files with automatic edge detection and image enhancement. Organize scans in folders and share instantly.",
     "size": 33,
